# covid-sim

./: .gitignore  Cargo.toml  README.md  demo.module.wasm  package.json  webpack.config.js
src/: index.html  index.js  lib.js  lib.rs  style.css
