[package]
name = "covid-sim"
version = "0.1.0"
authors = ["Jakob Meier <mail@jakobmeier.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
console_error_panic_hook = "0.1.6"
rand = { version = "0.7", features = ["small_rng", "wasm-bindgen"]}
