[package]
name = "wasm-covid-sim"
version = "1.0.0"
authors = ["Jakob Meier <inbox@jakobmeier.ch>"]
edition = "2018"
description = "Demo app for Rust in the browser."
license = "MIT/Apache-2.0"
repository = "https://github.com/jakmeier/covid-sim.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
console_error_panic_hook = "0.1.6"
rand = { version = "0.7", features = ["small_rng", "wasm-bindgen"]}
